Fixed class naming mismatch and added CORS fix